[package]
name = "language_atlas"
version = "0.1.0"
edition = "2024"
authors = ["Tom Paßberg"]
license = "MIT"
description = "This crate provides a macro to generate a language atlas. The Atlas provides functions that return different strings depending on the selected language."
repository = "https://github.com/Tomyyy-1337/language_atlas"
keywords = ["language", "language_atlas", "dict", "language_dict", "translations"]
categories = ["accessibility", "development-tools::ffi", "text-processing"]
readme = "README.md"

[dependencies]

